labs/04-ingress-sidecar-networkpolicy/hello-piggyback.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-piggyback
  namespace: hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        piggyback: ok
    spec:
      serviceAccountName: hello-sa
      containers:
      - image: istio/examples-helloworld-v1
        name: helloworld
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
