labs/04-ingress-sidecar-networkpolicy/hello-v3-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-v3-netpol-ingress
  namespace: hello
spec:
  podSelector:
    matchLabels:
      app: hello
      version: v3
  ingress:
  - ports:
    - protocol: TCP
      #port: 5040
      port: 5000
    from:
    - podSelector:
        matchLabels:
          istio: ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-v3-netpol-piggyback
  namespace: hello
spec:
  podSelector:
    matchLabels:
      app: hello
      version: v3
  ingress:
  - ports:
    - protocol: TCP
      #port: 5040
      port: 5000
    from:
    - podSelector:
        matchLabels:
          piggyback: ok
---
